# simpleaudiostretch

./: .coveragerc  .gitignore  .readthedocs.yaml  LICENSE  README.md  a.py  data.json  pyproject.toml  requirements.txt  sphinx_conf.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: format.yml  run_tests.yml
docs/: requirements.txt
docs/source/: api.md  cli.md  conf.py  index.md  index.rst
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_017453222687706c___init___py.html  z_a44f0ac069e85531_test_py.html  z_a44f0ac069e85531_test_speedup_py.html  z_a44f0ac069e85531_test_stretch_py.html
src/simplestretch/: __init__.py  cli.py
tests/: test.py  test_speedup.py  test_stretch.py
