[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simplestretch"]

[project.scripts]
simplestretch = "simplestretch.cli:main"

[project]
name = "simpleaudiostretch"
version = "0.2.4"
authors = [
  { name="Mews", email="tiraraspas@gmail.com" },
]
description = "A small package to stretch audio"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "soundfile",
  "numpy",
]
keywords = ["audio", "speed", "stretch", "wav", "mp3", "sound"]

[project.urls]
Homepage = "https://github.com/Mews/simpleaudiostretch"
Issues = "https://github.com/Mews/simpleaudiostretch/issues"
